--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,13 +39,16 @@ dependencies {
     provided 'org.glassfish:javax.annotation:10.0-b28'
 
     //Rxjava2
-    compile 'io.reactivex.rxjava2:rxjava:2.0.7'
-    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    //compile 'io.reactivex.rxjava2:rxjava:2.0.7'
+    //compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    //暂时用1，后续替换
+    compile 'io.reactivex:rxjava:1.1.6'
+    compile 'io.reactivex:rxandroid:1.2.1'
 
     //Retrofit2
-    compile 'com.squareup.retrofit2:retrofit:latest.release'
-    compile 'com.squareup.retrofit2:converter-gson:latest.release'
-    compile 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
 
     //RxCache
     //compile "com.github.VictorAlbertos.RxCache:runtime:1.8.0-2.x"
