--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,4 +55,9 @@ dependencies {
     compile 'com.flyco.tablayout:FlycoTabLayout_Lib:2.1.2@aar'
     compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.18'
 
+    //glide
+    compile 'com.github.bumptech.glide:glide:4.0.0-RC0'
+    compile 'com.android.support:support-v4:25.3.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0-RC0'
+
 }
