--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,9 @@ dependencies {
     compile 'com.android.support:support-v4:25.3.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0-RC0'
 
+    // vlayout
+    compile ('com.alibaba.android:vlayout:1.0.7@aar') {
+        transitive = true
+    }
+
 }
