--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,9 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
+    // eventBus
+    compile 'org.greenrobot:eventbus:3.0.0'
+
     //RxCache
     //compile "com.github.VictorAlbertos.RxCache:runtime:1.8.0-2.x"
     //compile 'com.github.VictorAlbertos.Jolyglot:gson:0.0.3'
@@ -56,9 +59,8 @@ dependencies {
     compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.18'
 
     //glide
-    compile 'com.github.bumptech.glide:glide:4.0.0-RC0'
-    compile 'com.android.support:support-v4:25.3.1'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0-RC0'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'jp.wasabeef:glide-transformations:2.0.1'
 
     // vlayout
     compile ('com.alibaba.android:vlayout:1.0.7@aar') {
@@ -68,5 +70,11 @@ dependencies {
     // banner
     compile 'com.youth.banner:banner:1.4.9'
 
-
+    // util
+    compile 'com.blankj:utilcode:1.7.1'
+    // glide
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'jp.wasabeef:glide-transformations:2.0.1'
+    // hawk
+    compile 'com.orhanobut:hawk:2.0.1'
 }
