--- a/build.gradle
+++ b/build.gradle
@@ -21,3 +21,16 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+ext {
+
+    compileSdkVersion = 25
+    buildToolsVersion = "25.0.2"
+
+    minSdkVersion = 15
+    targetSdkVersion = 25
+
+    versionCode = 1
+    versionName = "1.0"
+
+}
