--- a/app/build.gradle
+++ b/app/build.gradle
@@ -106,7 +106,6 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
     // eventBus
     compile 'org.greenrobot:eventbus:3.0.0'
-
     //RxCache
     //compile "com.github.VictorAlbertos.RxCache:runtime:1.8.0-2.x"
     //compile 'com.github.VictorAlbertos.Jolyglot:gson:0.0.3'
@@ -114,19 +113,15 @@ dependencies {
     compile 'com.squareup.okhttp3:logging-interceptor:3.6.0'
     compile 'com.flyco.tablayout:FlycoTabLayout_Lib:2.1.2@aar'
     compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.18'
-
     //glide
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'jp.wasabeef:glide-transformations:2.0.1'
-
     // vlayout
     compile('com.alibaba.android:vlayout:1.0.7@aar') {
         transitive = true
     }
-
     // banner
     compile 'com.youth.banner:banner:1.4.9'
-
     // util
     compile 'com.blankj:utilcode:1.7.1'
     // glide
@@ -134,4 +129,6 @@ dependencies {
     compile 'jp.wasabeef:glide-transformations:2.0.1'
     // hawk
     compile 'com.orhanobut:hawk:2.0.1'
+    compile 'com.android.support:design:26.0.0-alpha1'
+
 }
