--- a/app/build.gradle
+++ b/app/build.gradle
@@ -130,5 +130,7 @@ dependencies {
     // hawk
     compile 'com.orhanobut:hawk:2.0.1'
     compile 'com.android.support:design:26.0.0-alpha1'
+    //rxdownload
+    compile 'zlc.season:rxdownload2:2.0.4'
 
 }
